--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geut/hyper-hooks",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "private": true,
   "description": "Hyper hooks",
   "main": "dist/cjs/hyper-hooks.js",
