--- a/package.json
+++ b/package.json
@@ -2,26 +2,23 @@
   "name": "@geut/hyper-hooks",
   "version": "1.0.0-beta.2",
   "description": "Hyper hooks",
-  "main": "dist/cjs/hyper-hooks.js",
-  "module": "dist/esm/hyper-hooks.js",
+  "main": "dist/esm/index.js",
+  "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "npm run clean && rollup -c",
-    "build:watch": "npm run clean && rollup -c --watch --environment NODE_ENV:development",
+    "build": "npm run clean && babel ./src --out-dir ./dist/esm --ignore \"**/*.test.js\"",
     "clean": "rimraf dist",
-    "lint": "standard",
-    "precommit": "lint-staged",
-    "test": "jest --verbose --passWithNoTests"
+    "lint": "standard"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.js": "npm run lint"
-  },
-  "jest": {
-    "testMatch": [
-      "**/tests/**/*.test.js"
-    ]
   },
   "dependencies": {
     "@geut/discovery-swarm-webrtc": "^4.0.2",
@@ -39,32 +36,19 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "7.12.1",
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@testing-library/react-hooks": "^3.4.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
-    "crypto-browserify": "^3.12.0",
+    "husky": "^4.3.0",
     "hyperbee": "^0.0.18",
     "hypercore": "^9.5.7",
     "hypercore-crypto": "^2.1.1",
-    "jest": "^26.6.2",
     "lint-staged": "^10.5.0",
-    "os-browserify": "^0.3.0",
     "proc-nexttick": "^1.0.0",
-    "process": "^0.11.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.28.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "standard": "^15.0.0",
-    "stream-browserify": "^3.0.0",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0"
+    "standard": "^15.0.0"
   },
   "peerDependencies": {
     "hyperbee": "^0.0.18",
@@ -73,17 +57,16 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "standard": {
     "parser": "babel-eslint",
     "ignore": [
       "dist"
     ],
     "env": [
-      "jest",
       "browser"
     ]
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
