--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@geut/hyper-hooks",
   "version": "1.0.0-beta.3",
-  "description": "Hyper hooks",
+  "description": "React hooks for hyper world",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "files": [
