--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "hyperbee": "^0.0.18",
     "hypercore": "^9.5.7",
     "hypercore-crypto": "^2.1.1",
+    "hyperdrive": "^10.18.0",
     "lint-staged": "^10.5.0",
     "proc-nexttick": "^1.0.0",
     "react": "^17.0.1",
