--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "npm run clean && babel ./src --out-dir ./dist/esm --ignore \"**/*.test.js\"",
     "clean": "rimraf dist",
-    "lint": "standard"
+    "lint": "standard",
+    "test": "jest --passWithNoTests"
   },
   "husky": {
     "hooks": {
@@ -21,12 +22,13 @@
     "*.js": "npm run lint"
   },
   "dependencies": {
-    "@geut/discovery-swarm-webrtc": "^4.0.2",
+    "@geut/discovery-swarm-webrtc": "^4.1.3",
+    "@geut/hyperbee-live-stream": "^1.0.1",
     "buffer-json-encoding": "^1.0.2",
     "pump": "^3.0.0",
     "random-access-idb": "^1.2.1",
-    "random-access-memory": "^3.1.1",
-    "use-deep-compare-effect": "^1.4.0"
+    "random-access-memory": "^3.1.2",
+    "use-deep-compare-effect": "^1.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -36,24 +38,27 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "7.12.1",
+    "@testing-library/react-hooks": "^5.0.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "husky": "^4.3.0",
-    "hyperbee": "^0.0.18",
-    "hypercore": "^9.5.7",
-    "hypercore-crypto": "^2.1.1",
+    "hyperbee": "^1.5.3",
+    "hypercore": "^9.7.5",
+    "hypercore-crypto": "^2.2.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.0",
     "proc-nexttick": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.2",
     "standard": "^15.0.0"
   },
   "peerDependencies": {
-    "hyperbee": "^0.0.18",
-    "hypercore": "^9.5.7",
-    "hypercore-crypto": "^2.1.1",
+    "hyperbee": "^1.5.3",
+    "hypercore": "^9.7.5",
+    "hypercore-crypto": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -66,7 +71,13 @@
       "dist"
     ],
     "env": [
-      "browser"
+      "browser",
+      "jest"
+    ]
+  },
+  "jest": {
+    "testMatch": [
+      "**/tests/**/*.test.js"
     ]
   }
 }
